[gd_scene load_steps=7 format=3 uid="uid://wmkiysp8iv7m"]

[ext_resource type="Script" uid="uid://bn6v4om706bah" path="res://scripts/player/player.gd" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://dxyjryo76ydaf" path="res://scripts/player/pivot.gd" id="2_g2els"]
[ext_resource type="Script" uid="uid://v5yco4th2db3" path="res://scripts/player/mouse_ray_cast.gd" id="3_dqkch"]
[ext_resource type="Script" uid="uid://bylygc04apr34" path="res://scripts/player/interaction_handler.gd" id="3_qhqgy"]
[ext_resource type="Script" uid="uid://du2cmouich2u" path="res://scripts/player/camera_3d.gd" id="3_qlg0r"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u8vuu"]
radius = 0.2
height = 1.7

[node name="Player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8527156, 0)
script = ExtResource("1_3vyb7")

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0.5366583, 0)
script = ExtResource("2_g2els")

[node name="Camera3D" type="Camera3D" parent="Pivot"]
script = ExtResource("3_qlg0r")

[node name="MouseRayCast" type="Node3D" parent="Pivot/Camera3D"]
script = ExtResource("3_dqkch")

[node name="LeftBackAudio" type="AudioStreamPlayer3D" parent="Pivot/Camera3D" groups=["right_back_audio_player"]]

[node name="RightBackAudio" type="AudioStreamPlayer3D" parent="Pivot/Camera3D" groups=["right_back_audio_player"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_u8vuu")

[node name="InteractionHandler" type="Node" parent="." node_paths=PackedStringArray("MouseRayCast") groups=["interaction_handler"]]
script = ExtResource("3_qhqgy")
MouseRayCast = NodePath("../Pivot/Camera3D/MouseRayCast")

[node name="FootstepsTimer" type="Timer" parent="."]

[node name="FootstepsPlayer" type="AudioStreamPlayer3D" parent="."]

[node name="CheckFloorMaterialRay" type="RayCast3D" parent="."]

[node name="StairsRaycast" type="RayCast3D" parent="."]
unique_name_in_owner = true

[node name="StairsBelowRaycast" type="RayCast3D" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="FootstepsTimer" to="." method="_on_footsteps_timer_timeout"]
